--- a/npkpir_23/web/wspolny/sub/fakturaplatnosci.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturaplatnosci.xhtml
@@ -34,7 +34,7 @@
                       filterBy="#{wpis.datawystawienia}" filterMatchMode="contains" filterStyle="display : none;" width="90">
                 <h:outputText value="#{wpis.datawystawienia}"/>
             </p:column>
-            <p:column headerText="nr kolejny" sortBy="#{wpis.numerkolejny}" sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}"
+            <p:column headerText="nr kolejny" sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}"
                       filterBy="#{wpis.numerkolejny}" filterMatchMode="contains" filterStyle="width:80px;">
                 <h:outputText value="#{wpis.numerkolejny}" />
             </p:column>
@@ -75,7 +75,7 @@
                       filterBy="#{wpis.datawystawienia}" filterMatchMode="contains" filterStyle="display : none;" width="90">
                 <h:outputText value="#{wpis.datawystawienia}"/>
             </p:column>
-            <p:column headerText="nr kolejny" sortBy="#{wpis.numerkolejny}" filterBy="#{wpis.numerkolejny}" filterMatchMode="contains" sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}"
+            <p:column headerText="nr kolejny" sortBy="#{wpis.numerkolejny}" filterBy="#{wpis.numerkolejny}" filterMatchMode="contains"  sortFunction="#{fakturaView.sortZaksiegowaneFaktury}"
                       filterStyle="width:80px;">
                 <h:outputText value="#{wpis.numerkolejny}" />
             </p:column>
