--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -841,10 +841,10 @@
                         <h:outputText value=":"/><h:outputText value="#{dokfkView.selected.oznaczenie4 ne null ?dokfkView.selected.oznaczenie4.symbol:'-'}" style="color: darkmagenta; font-size: large"/>
                 </p:panelGrid>
             </h:form>
-            <h:form id="oznaczjakonkup">
+<!--            <h:form id="oznaczjakonkup">
                 <p:commandButton id="oznaczjakonkup" value="oznacz jako nkup" actionListener="#{dokfkView.oznaczjakonkup()}" accesskey="b"
                                  global="false" style="display: none;" />
-            </h:form>
+            </h:form>-->
             <h:form id="wpisywaniegrupa">
                 <p:commandButton id="sprawdzwartoscigrupy" value="sprawdzwartoscigrupy" actionListener="#{dokfkView.sprawdzwartoscigrupy()}" 
                                  global="false" style="display: none;" />
