--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
@@ -33,16 +33,17 @@
         }
     </style>
     <p:dialog id="zapisy" header="Zapisy na pojedynczym koncie firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" widgetVar="zapisynakoncie" appendTo="@(body)"
-              resizable="false" onShow="ustawdialog('zapisy','menudokumenty',2000,780);doczeplistnerydopol();$(document.getElementById('formwpiskonta:wyborkonta_input')).focus();$(document.getElementById('formwpiskonta:wyborkonta_input')).select();"
-              onHide="resetujdialog('zapisy');"  closeOnEscape="true" minimizable="true" dynamic="true" 
+              resizable="false" onShow="ustawdialog('zapisy','menudokumenty',1900,780);doczeplistnerydopol();$(document.getElementById('formwpiskonta:wyborkonta_input')).focus();$(document.getElementById('formwpiskonta:wyborkonta_input')).select();"
+              onHide="resetujdialog('zapisy');"  closeOnEscape="true" minimizable="true" dynamic="true" focus="formwpiskonta:wyborkonta"
               >
-        <p:ajax event="open" listener="#{kontoZapisFKView.init()}" onsuccess="$(document.getElementById('formwpiskonta:wyborkonta_input')).focus();$(document.getElementById('formwpiskonta:wyborkonta_input')).select();" update="formwpiskonta form tabelazzapisami tabelazsumami miesiacezapisykonta walutazapisynakoncie formwpiskontarok"/>
+        <p:ajax event="open" global="true" listener="#{kontoZapisFKView.init()}" oncomplete="$(document.getElementById('formwpiskonta:wyborkonta_input')).focus();$(document.getElementById('formwpiskonta:wyborkonta_input')).select();" 
+                update="formwpiskonta form tabelazzapisami tabelazsumami miesiacezapisykonta walutazapisynakoncie formwpiskontarok"/>
         <pe:layout fullPage="false" style="height: 720px;width: 820px;" >  
             <pe:layoutPane position="north">
                 <p:panelGrid columns="4" id="paseknorth" columnClasses="kontaGrid1, kontaGrid2">
                     <h:form id="formwpiskonta">
                         <h:outputText value="#{mgs.wybierzkonto}: "/>
-                        <p:autoComplete id="wyborkonta" value="#{kontoZapisFKView.wybranekonto}" completeMethod="#{kontoZapisFKView.complete}" 
+                        <p:autoComplete id="wyborkonta" value="#{kontoZapisFKView.wybranekonto}" completeMethod="#{kontoZapisFKView.complete}" widgetVar="zapisynakonciewybor"
                                         var="p" itemLabel="#{p.pelnynumer} #{p.nazwapelna}" itemValue="#{p}" cache="true" forceSelection="true"
                                         minQueryLength="1" maxResults="15" maxlength="10" converter="#{kontoConv}"
                                         converterMessage="Nieudana konwersja Klient"
