--- a/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
@@ -39,7 +39,7 @@
             </p:panelGrid>
         </p:panel>
          <p:panel id="wiadomoscfaktury">
-             <h:outputText value="Brak faktury Taxmana wystawionej dla podatnika!!!" rendered="#{sprawdzOkresowaWpis.brakOkresowej() eq true}" style="font-weight: 900; color: red; font-size: xx-large"/>
+             <h:outputText value="Brak faktury okresowej Taxmana dla podatnika!!!" rendered="#{WpisView.biuroiszef eq false and WpisView.podatnikObiekt.nip ne '8511005008'}" style="font-weight: 900; color: red; font-size: x-large"/>
         </p:panel>
         <p:panel>
             <h:outputText value="nie wprowadzono danych tego podatnika na nowy rok podatkowy - program nie będzie działał poprawnie" rendered="#{WpisView.czegosbrakuje}" style="font-weight: 800; color: red;"/>
