--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -480,6 +480,7 @@
                                                 symbolPosition="s" signPosition="p"   thousandSeparator="&#160;"  inputStyle="text-align: right;" size="13" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto" 
                                                 >
                                     <p:ajax global="false" event="change" listener="#{dokfkView.updatebrutto(item,'formwpisdokument', rowindex)}" partialSubmit="true"/>
+                                    <p:ajax global="false" event="blur" listener="#{dokfkView.dolaczWierszeZKwotami(item, rowindex)}" partialSubmit="true"/>
                                 </p:inputNumber>
                             </p:column>
                             <p:column headerText="op/zw" style="width: 45px; text-align: center;">
@@ -488,7 +489,6 @@
                                                  onblur="$(this).removeClass('ui-state-focus');" style="width: 45px; height: 20px;">
                                     <f:selectItem itemLabel="op" itemValue="sprz.op"/>
                                     <f:selectItem itemLabel="op.izw." itemValue="sprzed.op.izw."/>
-                                    <p:ajax global="false" event="focus" listener="#{dokfkView.dolaczWierszeZKwotami(item, rowindex)}" partialSubmit="true"/>
                                 </h:selectOneMenu>
                             </p:column>
                             <p:column style="width: 25px; text-align: center;" rendered="#{!item.nieduplikuj}">
