--- a/npkpir_23/web/admin/sub/sesja.xhtml
+++ b/npkpir_23/web/admin/sub/sesja.xhtml
@@ -9,8 +9,8 @@
     <p:outputPanel id="wrapper">
         <h:form id="form">
             <p:commandButton value="#{mgs.pobierz}" actionListener="#{sesjaView.pobierzsesje()}" update=":form" style="width: 120px; "/>
-            <p:dataTable  var="wpis" value="#{sesjaView.wykazsesji}" id="lista" style="padding: 10px;" 
-                          paginator="true" paginatorAlwaysVisible="true" rows="30" sortBy="#{wpis.wylogowanie}"
+            <p:dataTable  var="wpis" value="#{sesjaView.wykazsesji}" id="lista" style="padding: 10px;width:1200px;" 
+                          paginator="true" paginatorAlwaysVisible="true" rows="30" sortBy="#{wpis.wylogowanie}" 
                           paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
                           rowsPerPageTemplate="30,100,200" 
                           rowKey="#{wpis.nrsesji}"> 
