--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_narastajaco.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_narastajaco.xhtml
@@ -22,12 +22,12 @@
                     <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaRZiSNarView.obliczRZiSOtwarciaRZiSData()}" update=":form_dialog_rzis_narastajaco"/>
                 </p:panelGrid>
                 <p:column>
-                   <p:commandButton value="#{mgs.drukuj}" style="width: 120px; margin-left: 50px;" type="submit" action="#{sesjaView.dodajwydruk()}" actionListener="#{pozycjaRZiSNarView.drukujRZiSNar()}"/>
+                   <p:commandButton value="#{mgs.drukuj}" style="width: 120px; margin-left: 50px;" type="submit" actionListener="#{pozycjaRZiSNarView.drukujRZiSNar()}"/>
                 </p:column>
             </p:panelGrid>
             <p:panelGrid columns="2" style="height: 600px;">
                 <p:column>
-                    <p:treeTable id="dataList" value="#{pozycjaRZiSNarView.rootProjektRZiS}" var="loop" selectionMode="checkbox" 
+                    <p:treeTable id="dataList" value="#{pozycjaRZiSNarView.rootProjektRZiS}" var="loop" 
                                  styleClass="tablicaplankont" resizableColumns="true" emptyMessage="#{mgs.niewybranorzis}" 
                                  scrollable="true" style="height: 650px; margin-top: 0px; overflow-y: scroll; #{pozycjaRZiSNarView.obliczszerkosc()}">
                         <f:facet  name="header">
