--- a/npkpir_23/web/wspolny/wspolnyFaktura.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyFaktura.xhtml
@@ -23,7 +23,17 @@
                                 <h:outputText value="Strona służy do generowania, przeglądania i księgowania faktur dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
                             </f:facet>
                         </p:panel>
-                        <ui:include src="sub/menu_wiad.xhtml"/> 
+                        <ui:include src="sub/menu_wiad.xhtml"/>
+                        <h:form id="zmianaokresuguest">
+                            <p:panelGrid columns="2" style="padding: 10px;">
+                              <h:outputText value="okres rozliczeniowy: " />
+                                    <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;margin-left: 10px;" converter="#{okresConverter}">
+                                        <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                                        <p:ajax event="change" partialSubmit="true" listener="#{fakturaView.init()}" global="true" 
+                                                update="@(form)"/>
+                                    </p:selectOneMenu>
+                              </p:panelGrid>
+                        </h:form>
                         <ui:include src="sub/faktura.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
                     </pe:layoutPane>
                 </pe:layout>
