--- a/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
@@ -40,11 +40,9 @@
         <p:panelGrid columns="1">
             <p:outputPanel style="padding: 20px;">
             <h:outputText value="wersja jpk (1 - jpk pierwotne, 2 korekta)"/>
-            <p:selectOneMenu value="#{jpk_VAT2NView.werjsajpkrecznie}" label="wersja jpk" style="margin-left: 20px;">
-                <f:selectItem itemValue="1" itemLabel="1"/>
-                <f:selectItem itemValue="2" itemLabel="2"/>
-                <p:ajax event="blur" partialSubmit="true" global="false"/>
-            </p:selectOneMenu>
+            <p:inputText value="#{jpk_VAT2NView.werjsajpkrecznie}" label="wersja jpk" style="margin-left: 20px;" size="4" maxlength="1">
+                <p:ajax event="change" partialSubmit="true" global="false"/>
+            </p:inputText>
             </p:outputPanel>
         </p:panelGrid>
         <p:panelGrid columns="6" rendered="#{WpisView.podatnikObiekt.nip eq '5263158333'}">
