--- a/npkpir_23/web/templateFK.xhtml
+++ b/npkpir_23/web/templateFK.xhtml
@@ -16,6 +16,8 @@
             <h:outputStylesheet id="template" name="#{CSSView.css}"/>
             <h:outputStylesheet library="css" name="stylefk.css"/>
             <h:outputStylesheet library="css" name="common.css"/>
+            <h:outputStylesheet name="cssnew/primeflex.css"/>
+            <h:outputStylesheet name="cssnew/saga-blue.css"/>
             <h:outputScript library="js_common" name="globales.js"/>
             <h:outputScript library="js_common" name="language.js"/>
             <h:outputScript library="js_common" name="underscore.js"/>
