--- a/npkpir_23/web/index.xhtml
+++ b/npkpir_23/web/index.xhtml
@@ -4,32 +4,33 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:bcf="http://brzaskun.com/facelets">
     <f:view locale="#{localeChanger.locale}">
         <ui:composition template="/template.xhtml">
             <ui:define name="title">
                 <h:outputText value="Podatkowa księga przychodów i rozchodów"></h:outputText>
             </ui:define>
             <ui:define name="body">
-                <f:view>
+                <f:view >
+                    <style>
+                         .content {
+                            flex-grow: 1;
+                        }
+                    </style>
                     <bcf:ajaxs/>
-                    <pe:layout fullPage="true" > 
-                        <!--                       
-                        -->                         <ui:include src="sub/layout/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layout/south.xhtml"/>   <!-- panel poludniowy-->
-
-                        <pe:layoutPane position="center" >
+                    <header class="header flex align-items-center justify-content-center">
+                        <ui:include src="sub/layout/north.xhtml"/> <!-- panel północny -->
+                    </header>
+                    <div class="content flex align-items-center justify-content-center font-bold border-round m-2 w-full">
+                        <div class="flex flex-column w-full h-full">
                             <h:form id="form">
-                                <ui:include src="sub/wyborpodatnika.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                                <ui:include src="sub/wyborpodatnika.xhtml"/>
                             </h:form>
-<!--                            <p:outputPanel rendered="#{WpisView.niegosc}">
-                                <ui:include src="sub/kalendarz.xhtml"/>    
-                                <ui:include src="sub/dialog_sprawy.xhtml"/>
-                                <ui:include src="sub/dialog_nowasprawa.xhtml"/> 
-                            </p:outputPanel>-->
-                        </pe:layoutPane>
-
-                    </pe:layout>
+                        </div>
+                    </div>
+                    <footer class="footer flex align-items-center justify-content-center">
+                        <ui:include src="sub/layout/south.xhtml"/> <!-- panel południowy -->
+                    </footer>
                 </f:view>
 
             </ui:define>
