--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_przeglad.xhtml
@@ -63,7 +63,7 @@
                     </f:facet>
                     <h:outputText value="#{item.wprowadzil.login}"/>
                 </p:column>-->
-                <p:column width="70" style="text-align: center;" sortable="true" sortBy="#{item.data}" filterBy="#{item.data}" filterMatchMode="contains">
+        <p:column width="70" style="text-align: center;" sortable="true" sortBy="#{item.data}" filterBy="#{item.data}" filterMatchMode="contains" sortOrder="descending" sortPriority="1">
                     <f:facet name="header">
                         <h:outputText value="data"/>
                     </f:facet>
