--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrachunki.xhtml
@@ -167,7 +167,7 @@
 <!--                            </f:facet>
                         </p:cellEditor>-->
                     </p:column>
-                    <p:column width="70"  sortable="true" sortBy="#{item.data}">
+            <p:column width="70"  sortable="true" sortBy="#{item.data}" sortPriority="1" sortOrder="descending">
                         <f:facet name="header">
                             <h:outputText value="data"/>
                         </f:facet>
