ewidencjavat niemiecka i nowy sposob na parallel przetwarzanie encji ReentrantLock

--- a/npkpir_23/web/wspolny/sub/srodkitablicadokumorzeniowe_old.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitablicadokumorzeniowe_old.xhtml
@@ -27,7 +27,7 @@
         }
     </style>
 <bcf:ajaxs/>
-    <h:form id="formSTRUmorzenie">
+    <h:form id="formNiemcyRok">
         <p:outputPanel id="wrapper2">
             <p:panel id="infosrodki" header="Dokumenty umorzeniowe niezbędne do księgowania pk">
                 <p:commandButton id="generujdokumenty"  action="#{amodokView.generujamodokumenty()}" 
