--- a/npkpir_23/web/wspolny/sub/srodkitablicadokumorzeniowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitablicadokumorzeniowe.xhtml
@@ -27,7 +27,7 @@
         }
     </style>
 <bcf:ajaxs/>
-    <h:form id="formSTRUmorzenie">
+    <h:form id="formNiemcyRok">
         <p:outputPanel id="wrapper2">
             <p:dataTable lazy="false"   var="subwpisX" value="#{sTRTabView.umorzeniazamiesiaclista}" id="dokumsrodkiLista"
                           styleClass="dokumorzeniowe" rowIndexVar="index"
